# intel8080

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
include/: 8080cpu.hpp  common.hpp  cpu8080.hpp  memory.hpp  opcodes8080.hpp
src/: 8080cpu.cpp  cpu8080.cpp  main.cpp  memory.cpp
